  pour calculer un taux d'absentéisme global.

Bulletins:
- Facilités d'ouverture exceptionnelle de saisie de notes/appréciations en période
  partiellement close.
- Possibilité d'envoyer les bulletins par mail lors de la génération des 
  bulletins en fin de période.
- Facilité de sélection d'un fichier de signature pour une classe.
- Possibilité d'ouvrir exceptionnellement la saisie AID en période partiellement close.
- Possibilité de signaler des fautes, de proposer des corrections sur les AID.
- Possibilité d'exclure certaines classes du module bulletins.
- Possibilité d'exporter en CSV les avis de conseils de classe.

Carnet de notes:
- Facilité de transfert des notes d'un enseignement à un autre dans le cas 
  d'un changement de groupe d'élève dans une même classe.
- Possibilité de choisir entre nom complet et nom court des évaluations dans les relevés de notes.

Cahiers de textes 1 et 2:
- Possibilité de choisir le nombre de fichiers uploadés lors de l'enregistrement d'une notice.

Cahiers de textes 2:
- Ajout d'une visionneuse Instrumenpoche.
- Mise à jour de l'appli GeoGebra.
- Possibilité de copier d'un clic le code source HTML d'une vignette.
- Possibilité" de supprimer des pièces jointes par lots.

Discipline:
- Possibilité de donner l'accès parent/élève aux incidents le concernant, 
  mais sans afficher les détails de l'incident 
  (pour inciter à un contact téléphonique avec le CPE).
- Ajout de tableaux des derniers incidents et des sanctions à venir.
- Ajout de la liste des PJ dans la variable 'travail' sur le fichier produit.

Orientation:
- Facilité de saisie globale de l'orientation pour une classe donnée.

AID:
- Possibilité de désigner comme "professeur" un compte scolarité ou cpe.
- Possibilité de déléguer la gestion de catégories à des personnels (scolarité, 
  cpe ou professeur).
- Possibilité de déclarer des professeurs, gestionnaires, super-gestionnaires par lots.

Épreuves blanches: