@@ -2319,4 +2319,4 @@ INSERT INTO droits SET id='/aid/gerer_user_aid.php', administrateur='V', profess
 INSERT INTO droits SET id='/messagerie/consulter_messages.php', administrateur='V', professeur='F', cpe='F', scolarite='F', eleve='F', responsable='F', secours='F', autre='F', description='Consulter les messages individuels sur le Panneau d affichage', statut='';
 INSERT INTO setting SET name='export_vers_sacoche', value='n';
 INSERT INTO droits SET id='/cahier_texte_2/voir_pj.php', administrateur='F', professeur='V', cpe='V', scolarite='V', eleve='V', responsable='V', secours='F', autre='F', description='Consulter les PJ à une notice de CDT', statut='';
-
+INSERT INTO droits SET id='/cahier_texte_2/documents_cdt.php', administrateur='F', professeur='V', cpe='F', scolarite='F', eleve='F', responsable='F', secours='F', autre='F', description='Documents joints aux CDT', statut='';
